[gd_scene load_steps=3 format=3 uid="uid://l7h1j8k9l0m1n"]

[ext_resource type="Script" path="res://scripts/DefeatScreen.gd" id="1"]
[ext_resource type="Theme" path="res://assets/ui_theme.tres" id="2"]

[node name="DefeatScreen" type="Control"]
script = ExtResource("1")
theme = ExtResource("2")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.1, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0

[node name="DefeatLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DEFEAT"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 0.8, 0, 1)

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"